Refactor problem descriptions to use inline code formatting for variables and mathematical expressions for improved readability. Updated input and output formats to maintain consistency in presentation.

--- a/pages/posts/题解/abc396 题解.md
+++ b/pages/posts/题解/abc396 题解.md
@@ -1,7 +1,6 @@
 ---
 title: abc-396 题解
 math: true
-categories:
   - 比赛 题解
 date: 2025-03-10 01:23:17
 cover: https://ooo.0x0.ooo/2025/08/22/OfdYEF.jpg
@@ -10,103 +9,118 @@ tags:
 
 ## **A - Triple Four**
 
-#### Problem Statement
+## 题目描述
 
-You are given an integer sequence of length $N$: $A = (A_1,A_2,\ldots,A_N)$.
+给定一个长度为 $N$ 的整数序列 $A = (A_1, A_2, \ldots, A_N)$。
 
-Determine whether there is a place in $A$ where the same element appears three or more times in a row.
+请判断 $A$ 中是否存在连续三个及以上相同元素的片段。  
+更严格地说，请判断是否存在满足 $1 \leq i \leq N-2$ 的整数 $i$，使得 $A_i = A_{i+1} = A_{i+2}$。
 
-More formally, determine whether there exists an integer $i$ with $1 \leq i \le N-2$ such that $A_i = A_{i+1} = A_{i+2}$.
+## 输入格式
 
-#### Constraints
+输入通过标准输入给出，格式如下：
 
--   $3 \le N \leq 100$
--   $1 \le A_i \leq 100$
--   All input values are integers.
+> $N$ $A_1$ $A_2$ $\ldots$ $A_N$
 
-#### Input
+## 输出格式
 
-The input is given from Standard Input in the following format:
+若 $A$ 中存在连续三个及以上相同元素的片段，输出 `Yes`；否则输出 `No`。
 
-$N$
-$A_1$ $A_2$ $\ldots$ $A_N$
+## 输入输出样例 #1
 
-#### Output
-
-If there is a place in $A$ where the same element appears three or more times in a row, print `Yes`. Otherwise, print `No`.
-
-#### Sample Input 1
+### 输入 #1
 
 ```
 5
 1 4 4 4 2
 ```
 
-#### Sample Output 1
+### 输出 #1
 
 ```
 Yes
 ```
 
-We have $A=(1,4,4,4,2)$. There is a place where $4$ appears three times in a row, so print `Yes`.
+## 输入输出样例 #2
 
-#### Sample Input 2
+### 输入 #2
 
 ```
 6
 2 4 4 2 2 4
 ```
 
-#### Sample Output 2
+### 输出 #2
 
 ```
 No
 ```
 
-We have $A=(2,4,4,2,2,4)$. There is no place where the same element appears three or more times in a row, so print `No`.
+## 输入输出样例 #3
 
-#### Sample Input 3
+### 输入 #3
 
 ```
 8
 1 4 2 5 7 7 7 2
 ```
 
-#### Sample Output 3
+### 输出 #3
 
 ```
 Yes
 ```
 
-#### Sample Input 4
+## 输入输出样例 #4
+
+### 输入 #4
 
 ```
 10
 1 2 3 4 5 6 7 8 9 10
 ```
 
-#### Sample Output 4
+### 输出 #4
 
 ```
 No
 ```
 
-#### Sample Input 5
+## 输入输出样例 #5
+
+### 输入 #5
 
 ```
 13
 1 1 1 1 1 1 1 1 1 1 1 1 1
 ```
 
-#### Sample Output 5
+### 输出 #5
 
 ```
 Yes
 ```
 
+## 说明/提示
+
+### 约束条件
+
+- $3 \leq N \leq 100$
+- $1 \leq A_i \leq 100$
+- 输入中的所有值均为整数
+
+### 样例解释 1
+
+$A = (1, 4, 4, 4, 2)$ 中存在三个连续的 $4$，因此输出 `Yes`。
+
+### 样例解释 2
+
+$A = (2, 4, 4, 2, 2, 4)$ 中没有连续三个及以上相同元素的片段，因此输出 `No`。
+
+
 ### 大意
 
-给定长度为n的序列，回答是否存在一个数，在该序列中连续出现至少三次。
+给定长度为 `n` 的序列，回答是否存在一个数，在该序列中连续出现至少三次。
 
 暴力，（不知道为啥给那么多样例…）
 
@@ -119,56 +133,50 @@ void solve()
     vector<int> v(n);
     for (auto &x : v)   cin >> x;
     bool flag = false;
-    for (int i=0;i+2<n;i++)
-            if (v[i] == v[i + 1] && v[i + 1] == v[i + 2])
-                flag = true;
+    for (int i = 0; i + 2 < n; i ++)
+        if (v[i] == v[i + 1] && v[i + 1] == v[i + 2])
+            flag = true;
     cout << (flag ? "Yes" : "No") << _endl;
 }
 ```
 
 ## **B - Card Pile**
 
-#### Problem Statement
+## 题目描述
 
-There is a stack of $100$ cards, each labeled with the integer $0$.
+存在一个初始由 $100$ 张写有整数 $0$ 的卡片堆叠而成的卡堆。
 
-Process $Q$ queries. Each query is of one of the following:
+请处理 $Q$ 个查询。每个查询为以下两种类型之一：
 
--   Type $1$: Place a card labeled with an integer $x$ on top of the stack.
--   Type $2$: Remove the top card of the stack and output the integer written on that removed card. Under the constraints of this problem, the stack always has at least one card.
+- 类型 $1$：将一张写有整数 $x$ 的卡片放到卡堆的最上方。
+- 类型 $2$：移除卡堆最上方的卡片，并输出被移除卡片上的整数。在本问题的约束下，保证此时卡堆中必定存在卡片。
 
-#### Constraints
+## 输入格式
 
--   $1 \le Q \le 100$
--   $1 \le x \le 100$
--   There is at least one query of type $2$.
--   All input values are integers.
+输入通过标准输入给出，格式如下：
 
-#### Input
+> $Q$  
+> $\text{query}_1$  
+> $\text{query}_2$  
+> $\vdots$  
+> $\text{query}_Q$
 
-The input is given from Standard Input in the following format:
+在第 $i$ 个查询 $\text{query}_i$ 中，首先给出查询类型 $c_i$（取值为 $1$ 或 $2$）。当 $c_i = 1$ 时，还会额外给出一个整数 $x$。
 
-$Q$
-$\text{query}_1$
-$\text{query}_2$
-$\vdots$
-$\text{query}_Q$
+即，每个查询为以下两种格式之一：
 
-The $i$\-th query $\text{query}_i$ starts with the query type $c_i$ ($1$ or $2$), followed by the integer $x$ if $c_i=1$.
+> $1$ $x$
 
-That is, each query is in one of the following two formats:
+> $2$
 
-$1$ $x$
+## 输出格式
 
-$2$
+设满足 $c_i = 2$ 的查询共有 $q$ 次，请输出 $q$ 行。  
+第 $j$ 行（$1 \leq j \leq q$）输出第 $j$ 次此类查询对应的结果。
 
-#### Output
+## 输入输出样例 #1
 
-Let $q$ be the number of queries with $c_i=2$. Print $q$ lines.
-
-The $j$\-th line ($1 \le j \le q$) should contain the answer to the $j$\-th such query.
-
-#### Sample Input 1
+### 输入 #1
 
 ```
 6
@@ -180,7 +188,7 @@ The $j$\-th line ($1 \le j \le q$) should contain the answer to the $j$\-th such
 2
 ```
 
-#### Sample Output 1
+### 输出 #1
 
 ```
 0
@@ -189,22 +197,9 @@ The $j$\-th line ($1 \le j \le q$) should contain the answer to the $j$\-th such
 0
 ```
 
-After processing each query, the stack is as follows:
+## 输入输出样例 #2
 
--   Remove the top card of the stack. The integer on the removed card is $0$, so output $0$.
-    -   The stack then has $99$ cards labeled with $0$.
--   Add a card labeled $4$ on top.
-    -   The stack then has $1$ card labeled $4$, and $99$ cards labeled $0$, from top to bottom.
--   Add a card labeled $3$ on top.
-    -   The stack then has $1$ card labeled $3$, $1$ card labeled $4$, and $99$ cards labeled $0$, from top to bottom.
--   Remove the top card. The integer on that card is $3$, so output $3$.
-    -   The stack then has $1$ card labeled $4$, and $99$ cards labeled $0$, from top to bottom.
--   Remove the top card. The integer on that card is $4$, so output $4$.
-    -   The stack then has $99$ cards labeled $0$.
--   Remove the top card. The integer on that card is $0$, so output $0$.
-    -   The stack then has $98$ cards labeled $0$.
-
-#### Sample Input 2
+### 输入 #2
 
 ```
 5
@@ -215,7 +210,7 @@ After processing each query, the stack is as follows:
 2
 ```
 
-#### Sample Output 2
+### 输出 #2
 
 ```
 0
@@ -224,14 +219,40 @@ After processing each query, the stack is as follows:
 0
 0
 ```
+
+## 说明/提示
+
+### 约束条件
+
+- $1 \leq Q \leq 100$
+- $1 \leq x \leq 100$
+- 保证至少存在一个类型 $2$ 的查询。
+- 输入中的所有值均为整数
+
+### 样例解释 1
+
+各查询处理后的卡堆状态如下（按顺序）：
+- 移除卡堆最上方的卡片。被移除卡片上的整数为 $0$，因此输出 $0$。
+- 卡堆变为 $99$ 张写有 $0$ 的卡片。
+- 将写有 $4$ 的卡片放到卡堆最上方。
+- 卡堆变为：最上方 $1$ 张写有 $4$ 的卡片，下方 $99$ 张写有 $0$ 的卡片。
+- 将写有 $3$ 的卡片放到卡堆最上方。
+- 卡堆变为：最上方 $1$ 张写有 $3$ 的卡片，中间 $1$ 张写有 $4$ 的卡片，下方 $99$ 张写有 $0$ 的卡片。
+- 移除卡堆最上方的卡片。被移除卡片上的整数为 $3$，因此输出 $3$。
+- 卡堆变为：最上方 $1$ 张写有 $4$ 的卡片，下方 $99$ 张写有 $0$ 的卡片。
+- 移除卡堆最上方的卡片。被移除卡片上的整数为 $4$，因此输出 $4$。
+- 卡堆变为 $99$ 张写有 $0$ 的卡片。
+- 移除卡堆最上方的卡片。被移除卡片上的整数为 $0$，因此输出 $0$。
+- 卡堆变为 $98$ 张写有 $0$ 的卡片。
+
 
 ### 大意
 
-给一个牌堆（栈），初始时，牌堆中有一百张标号为零的牌，给定 $q$ 个询问，对于每个询问，若是类型一则将标号为 $x$ 的牌放到牌堆顶，
+给一个牌堆（栈），初始时，牌堆中有一百张标号为`0`的牌，给定 `q` 个询问，对于每个询问，若是类型`1`则将标号为 `x` 的牌放到牌堆顶，
 
-若是类型二则取出牌堆顶的牌，并输出其标号。
+若是类型`2`则取出牌堆顶的牌，并输出其标号。
 
-模拟，可使用`stack` 或 数组模拟栈。
+模拟，可使用 `stack` 或数组模拟栈。
 
 ### CODE
 
@@ -239,47 +260,44 @@ After processing each query, the stack is as follows:
 void solve()
 {
     stack<int> st;
-    for (int i=1;i<=100;i++)    st.push(0);
+    for (int i = 1; i <= 100; i ++)
+        st.push(0);
     int n, op, x;  cin >> n;
-    for (int i=1;i<=n;i++)
+    for (int i = 1; i <= n ; i ++)
     {
         cin >> op;
         if (op == 1)
             cin >> x, st.push(x);
         else if (op == 2)
-            cout << st.top() << _endl, st.pop();
+            cout << st.top() << "\n", st.pop();
     }
 }
 ```
 
 ## **C - Buy Balls**
 
-#### Problem Statement
+## 题目描述
 
-There are $N$ black balls and $M$ white balls.  
-Each ball has a value. The value of the $i$\-th black ball ($1 \le i \le N$) is $B_i$, and the value of the $j$\-th white ball ($1 \le j \le M$) is $W_j$.
+现有 $N$ 个黑色球和 $M$ 个白色球。  
+每个球都有一个价值：第 $i$ 个（$1 \leq i \leq N$）黑色球的价值为 $B_i$，第 $j$ 个（$1 \leq j \leq M$）白色球的价值为 $W_j$。
 
-Choose zero or more balls so that the number of black balls chosen is at least the number of white balls chosen. Among all such choices, find the maximum possible sum of the values of the chosen balls.
+请选择 **零个或多个** 球，使得所选黑色球的数量 **不少于** 白色球的数量。求所选球的价值总和的最大可能值。
 
-#### Constraints
+## 输入格式
 
--   $1 \leq N,M \leq 2\times 10^5$
--   $-10^9 \leq B_i, W_j \leq 10^9$
--   All input values are integers.
+输入通过标准输入给出，格式如下：
 
-#### Input
+> $N$ $M$  
+> $B_1$ $B_2$ $\ldots$ $B_N$  
+> $W_1$ $W_2$ $\ldots$ $W_M$
 
-The input is given from Standard Input in the following format:
+## 输出格式
 
-$N$ $M$
-$B_1$ $B_2$ $\ldots$ $B_N$
-$W_1$ $W_2$ $\ldots$ $W_M$
+输出答案。
 
-#### Output
+## 输入输出样例 #1
 
-Print the answer.
-
-#### Sample Input 1
+### 输入 #1
 
 ```
 4 3
@@ -287,15 +305,15 @@ Print the answer.
 3 -2 -4
 ```
 
-#### Sample Output 1
+### 输出 #1
 
 ```
 19
 ```
 
-If you choose the 1st, 2nd, and 4th black balls, and the 1st white ball, the sum of their values is $8+5+3+3=19$, which is the maximum.
+## 输入输出样例 #2
 
-#### Sample Input 2
+### 输入 #2
 
 ```
 4 3
@@ -303,15 +321,15 @@ If you choose the 1st, 2nd, and 4th black balls, and the 1st white ball, the sum
 8 1 4
 ```
 
-#### Sample Output 2
+### 输出 #2
 
 ```
 15
 ```
 
-If you choose the 1st and 3rd black balls, and the 1st and 3rd white balls, the sum of their values is $5+(-2)+8+4=15$, which is the maximum.
+## 输入输出样例 #3
 
-#### Sample Input 3
+### 输入 #3
 
 ```
 3 5
@@ -319,19 +337,37 @@ If you choose the 1st and 3rd black balls, and the 1st and 3rd white balls, the 
 12 12 28 24 27
 ```
 
-#### Sample Output 3
+### 输出 #3
 
 ```
 0
 ```
 
-It is possible to choose no balls.
+## 说明/提示
+
+### 约束条件
+
+- $1 \leq N, M \leq 2 \times 10^5$
+- $-10^9 \leq B_i, W_j \leq 10^9$
+- 输入中的所有值均为整数
+
+### 样例解释 1
+
+选择第 $1,2,4$ 个黑色球和第 $1$ 个白色球时，总价值为 $8 + 5 + 3 + 3 = 19$，这是最大值。
+
+### 样例解释 2
+
+选择第 $1,3$ 个黑色球和第 $1,3$ 个白色球时，总价值为 $5 + (-2) + 8 + 4 = 15$，这是最大值。
+
+### 样例解释 3
+
+允许不选择任何球，此时总价值为 $0$。
 
 ### 大意
 
-给定两个序列，长度分别为 $n,\ m$ , 表示存在 $n$ 个黑球和 $m$ 个白球，每个球都有一个权值，回答在满足 选择的黑球数 $\geq$ 白球数 的条件下，所有被选球权值的最大值。
+给定两个序列，长度分别为 `n, m` , 表示存在 `n` 个黑球和 `m` 个白球，每个球都有一个权值，回答在满足 选择的黑球数 $\geq$ 白球数 的条件下，所有被选球权值的最大值。
 
-对两个序列分别降序排序， 找到白球选择的数量 $k$ , 再判断黑球是否可以继续选择更多。
+对两个序列分别降序排序， 找到白球选择的数量 `k` , 再判断黑球是否可以继续选择更多。
 
 ### CODE
 
@@ -342,60 +378,54 @@ void solve()
     vector<int> b(n), w(m);
     for (auto &x : b)   cin >> x;
     for (auto &x : w)   cin >> x;
-    sort(all(b), greater<int>());
-    sort(all(w), greater<int>());
+    sort(b.begin(), b.end(), greater<int>());
+    sort(w.begin(), w.end(), greater<int>());
     int ans = 0, i;
-    for (i=0;i<min(m, n);i++)
+    for (i = 0; i < min(m, n); i ++)
     {
         if (b[i] >= w[i] && b[i] >= 0 && w[i] >= 0)
             ans += b[i] + w[i];
-        else if (b[i] < w[i] && b[i] + w[i] > 0)        ans += b[i] + w[i];   
-        else	break;
+        else if (b[i] < w[i] && b[i] + w[i] > 0) ans += b[i] + w[i];   
+        else break;
     }
-    for (;i<n;i++)    ans += (b[i] > 0 ? b[i] : 0);
+    for (; i < n; i ++) 
+        ans += (b[i] > 0 ? b[i] : 0);
     cout << ans;
 }
 ```
 
 ## **D - Minimum XOR Path**
 
-#### Problem Statement
+## 题目描述
 
-You are given a simple connected undirected graph with $N$ vertices numbered $1$ through $N$ and $M$ edges numbered $1$ through $M$. Edge $i$ connects vertices $u_i$ and $v_i$, and has a label $w_i$.
+给定一个简单连通无向图，包含 $N$ 个顶点（编号为 $1$ 至 $N$）和 $M$ 条边（编号为 $1$ 至 $M$）。边 $i$ 连接顶点 $u_i$ 和 $v_i$，并带有标签 $w_i$。
 
-Among all simple paths (paths that do not pass through the same vertex more than once) from vertex $1$ to vertex $N$, find the minimum XOR of the labels of the edges on the path.
+请找出从顶点 $1$ 到顶点 $N$ 的所有简单路径（不重复经过顶点的路径）中，路径上所有边标签的总异或值的最小可能值。
 
-Notes on XOR For non-negative integers $A$ and $B$, their XOR $A \oplus B$ is defined as follows:
+关于异或（XOR）的定义：  
+对于非负整数 $A$ 和 $B$，它们的异或 $A \oplus B$ 定义如下：
+- $A \oplus B$ 的二进制表示中，$2^k$ 位（$k \geq 0$）的值为 $1$，当且仅当 $A$ 和 $B$ 在 $2^k$ 位上的值不同；否则为 $0$。
 
--   In the binary representation of $A \oplus B$, the digit in the place corresponding to $2^k \,(k \ge 0)$ is $1$ if and only if exactly one of the digits in the same place of $A$ and $B$ is $1$; otherwise, it is $0$.
+例如，$3 \oplus 5 = 6$（二进制表示为 $011 \oplus 101 = 110$）。  
+对于 $k$ 个整数 $p_1, \dots, p_k$ 的异或，定义为 $(\cdots ((p_1 \oplus p_2) \oplus p_3) \oplus \cdots \oplus p_k)$，且其值与运算顺序无关。
 
-For example, $3 \oplus 5 = 6$ (in binary: $011 \oplus 101 = 110$).  
-In general, the XOR of $k$ integers $p_1, \dots, p_k$ is defined as $(\cdots ((p_1 \oplus p_2) \oplus p_3) \oplus \cdots \oplus p_k)$. It can be proved that it does not depend on the order of $p_1, \dots, p_k$.
+## 输入格式
 
-#### Constraints
+输入通过标准输入给出，格式如下：
 
--   $2 \leq N \leq 10$
--   $N-1 \leq M \leq \frac{N(N-1)}{2}$
--   $1 \leq u_i\ \textless\ v_i \leq N$
--   $0 \leq w_i\ \textless\ 2^{60}$
--   The given graph is a simple connected undirected graph.
--   All input values are integers.
+> $N$ $M$  
+> $u_1$ $v_1$ $w_1$  
+> $u_2$ $v_2$ $w_2$  
+> $\vdots$  
+> $u_M$ $v_M$ $w_M$
 
-#### Input
+## 输出格式
 
-The input is given from Standard Input in the following format:
+输出答案。
 
-$N$ $M$
-$u_1$ $v_1$ $w_1$
-$u_2$ $v_2$ $w_2$
-$\vdots$
-$u_M$ $v_M$ $w_M$
+## 输入输出样例 #1
 
-#### Output
-
-Print the answer.
-
-#### Sample Input 1
+### 输入 #1
 
 ```
 4 4
@@ -405,20 +435,15 @@ Print the answer.
 3 4 7
 ```
 
-#### Sample Output 1
+### 输出 #1
 
 ```
 3
 ```
 
-There are two simple paths from vertex $1$ to vertex $4$:
+## 输入输出样例 #2
 
--   $1 \to 2 \to 4$
--   $1 \to 3 \to 4$
-
-The XOR of the labels on the edges of the first path is $6$, and that of the second path is $3$. Therefore, the answer is $3$.
-
-#### Sample Input 2
+### 输入 #2
 
 ```
 4 3
@@ -427,13 +452,15 @@ The XOR of the labels on the edges of the first path is $6$, and that of the sec
 3 4 4
 ```
 
-#### Sample Output 2
+### 输出 #2
 
 ```
 7
 ```
 
-#### Sample Input 3
+## 输入输出样例 #3
+
+### 输入 #3
 
 ```
 7 10
@@ -449,15 +476,35 @@ The XOR of the labels on the edges of the first path is $6$, and that of the sec
 5 7 938201660808593198
 ```
 
-#### Sample Output 3
+### 输出 #3
 
 ```
 186751192333709144
 ```
 
+## 说明/提示
+
+### 约束条件
+
+- $2 \leq N \leq 10$
+- $N - 1 \leq M \leq \frac{N(N-1)}{2}$
+- $1 \leq u_i < v_i \leq N$
+- $0 \leq w_i < 2^{60}$
+- 输入的图是简单连通无向图
+- 输入中的所有值均为整数
+
+### 样例解释 1
+
+从顶点 $1$ 到顶点 $4$ 存在以下两条简单路径：  
+1. 顶点 $1$ → 顶点 $2$ → 顶点 $4$  
+   路径上的边标签总异或值为 $6$。  
+2. 顶点 $1$ → 顶点 $3$ → 顶点 $4$  
+   路径上的边标签总异或值为 $3$。  
+因此，最小值为 $3$。
+
 ### 大意
 
-给定一个 $n$ 个点， $m$ 条边的简单无向图，每条边存在一个权值。找到从 $1\sim N$ 的简单路径中，边权异或和最小的路径，输出该异或和。
+给定一个 `n` 个点， `m` 条边的简单无向图，每条边存在一个权值。找到从 $1 \sim N$ 的简单路径中，边权异或和最小的路径，输出该异或和。
 
 观察到 $n \in [2,\ 10]$ ， 可直接暴力 `dfs` 。
 
@@ -470,9 +517,10 @@ void solve()
 {
     int n, m;   cin >> n >> m;
     vector<vector<pair<int, int>>> adj(n + 1);
-    for (int i=1;i<=m;i++)
+    for (int i = 1; i <= m; i ++)
     {
-        int u, v, w;    cin >> u >> v >> w;
+        int u, v, w;    
+        cin >> u >> v >> w;
         adj[u].push_back({v, w});
         adj[v].push_back({u, w});
     }
@@ -503,49 +551,40 @@ void solve()
 
 ## **E - Min of Restricted Sum**
 
-### Problem Statement
+## 题目描述
 
-You are given integers $N, M$ and three integer sequences of length $M$: $X = (X_1, X_2, \ldots, X_M)$, $Y = (Y_1, Y_2, \ldots, Y_M)$, and $Z = (Z_1, Z_2, \ldots, Z_M)$. It is guaranteed that all elements of $X$ and $Y$ are between $1$ and $N$, inclusive.
+给定整数 $N, M$ 和长度为 $M$ 的整数序列 $X=(X_1,X_2,\ldots,X_M)$、$Y=(Y_1,Y_2,\ldots,Y_M)$、$Z=(Z_1,Z_2,\ldots,Z_M)$。其中，保证 $X$ 和 $Y$ 的所有元素均在 $1$ 至 $N$ 的范围内。
 
-We call a length-$N$ sequence of non-negative integers $A = (A_1, A_2, \ldots, A_N)$ a **good sequence** if and only if it satisfies the following condition:
+定义长度为 $N$ 的非负整数序列 $A=(A_1,A_2,\ldots,A_N)$ 为 **好的整数序列**，当且仅当满足以下条件：
+- 对于所有满足 $1 \leq i \leq M$ 的整数 $i$，有 $A_{X_i} \oplus A_{Y_i} = Z_i$，其中 $\oplus$ 表示异或运算。
 
--   For every integer $i$ with $1 \le i \le M$, the XOR of $A_{X_i}$ and $A_{Y_i}$ is $Z_i$.
+请判断是否存在这样的好的整数序列。若存在，请找出使得元素总和 $\displaystyle \sum_{i=1}^N A_i$ 最小的好的整数序列，并输出该序列。
 
-Determine whether a good sequence $A=(A_1,A_2,\ldots,A_N)$ exists, and if it exists, find one good sequence that minimizes the sum of its elements $\displaystyle \sum_{i=1}^N A_i$.
+关于异或（XOR）的定义：  
+对于非负整数 $A$ 和 $B$，它们的异或 $A \oplus B$ 定义如下：
+- $A \oplus B$ 的二进制表示中，$2^k$ 位（$k \geq 0$）的值为 $1$，当且仅当 $A$ 和 $B$ 在 $2^k$ 位上的值不同；否则为 $0$。
 
-Notes on XOR For non-negative integers $A$ and $B$, their XOR $A \oplus B$ is defined as follows:
+例如，$3 \oplus 5 = 6$（二进制表示为 $011 \oplus 101 = 110$）。
 
--   In the binary representation of $A \oplus B$, the digit in the place corresponding to $2^k \,(k \ge 0)$ is $1$ if and only if exactly one of the digits in the same place of $A$ and $B$ is $1$; otherwise, it is $0$.
+## 输入格式
 
-For example, $3 \oplus 5 = 6$ (in binary: $011 \oplus 101 = 110$).
+输入通过标准输入给出，格式如下：
 
-### Constraints
+> $N$ $M$  
+> $X_1$ $Y_1$ $Z_1$  
+> $X_2$ $Y_2$ $Z_2$  
+> $\vdots$  
+> $X_M$ $Y_M$ $Z_M$
 
--   $1 \le N \le 2\times 10^5$
--   $0 \le M \le 10^5$
--   $1 \le X_i, Y_i \le N$
--   $0 \le Z_i \le 10^9$
--   All input values are integers.
+## 输出格式
 
-### Input
+若不存在好的整数序列，输出 $-1$。  
+若存在，则输出满足总和最小的好的整数序列，元素间用空格分隔。  
+若存在多个总和最小的序列，输出任意一个均可。
 
-The input is given from Standard Input in the following format:
+## 输入输出样例 #1
 
-$N$ $M$
-$X_1$ $Y_1$ $Z_1$
-$X_2$ $Y_2$ $Z_2$
-$\vdots$
-$X_M$ $Y_M$ $Z_M$
-
-### Output
-
-If no good sequence exists, print $-1$.
-
-If a good sequence exists, print one good sequence that minimizes the sum of its elements, separated by spaces.
-
-If there are multiple good sequences with the same minimum sum, printing any of them is accepted.
-
-### Sample Input 1
+### 输入 #1
 
 ```
 3 2
@@ -553,17 +592,15 @@ If there are multiple good sequences with the same minimum sum, printing any of 
 1 2 3
 ```
 
-### Sample Output 1
+### 输出 #1
 
 ```
 0 3 4
 ```
 
-$A=(0,3,4)$ is a good sequence because $A_1 \oplus A_2 = 3$ and $A_1 \oplus A_3 = 4$.
+## 输入输出样例 #2
 
-Other good sequences include $A=(1,2,5)$ and $A=(7,4,3)$, but $A=(0,3,4)$ has the smallest sum among all good sequences.
-
-### Sample Input 2
+### 输入 #2
 
 ```
 3 3
@@ -572,15 +609,15 @@ Other good sequences include $A=(1,2,5)$ and $A=(7,4,3)$, but $A=(0,3,4)$ has th
 2 3 5
 ```
 
-### Sample Output 2
+### 输出 #2
 
 ```
 -1
 ```
 
-No good sequence exists, so print $-1$.
+## 输入输出样例 #3
 
-### Sample Input 3
+### 输入 #3
 
 ```
 5 8
@@ -594,65 +631,72 @@ No good sequence exists, so print $-1$.
 3 4 15
 ```
 
-### Sample Output 3
+### 输出 #3
 
 ```
 0 2 9 6 0
 ```
 
+## 说明/提示
+
+### 约束条件
+
+- $1 \leq N \leq 2 \times 10^5$
+- $0 \leq M \leq 10^5$
+- $1 \leq X_i, Y_i \leq N$
+- $0 \leq Z_i \leq 10^9$
+- 输入中的所有值均为整数
+
+### 样例解释 1
+
+序列 $A=(0, 3, 4)$ 满足 $A_1 \oplus A_2 = 3$ 和 $A_1 \oplus A_3 = 4$，因此是好的整数序列。其他可能的序列如 $A=(1, 2, 5)$ 或 $A=(7, 4, 3)$ 也满足条件，但总和最小的序列是 $A=(0, 3, 4)$。
+
+### 样例解释 2
+
+不存在满足条件的好的整数序列，因此输出 $-1$。
+
 ### 大意
 
-给定三个长度为 $m$ 的序列 $X = (X_1, X_2, \ldots, X_M)$, $Y = (Y_1, Y_2, \ldots, Y_M)$, 和 $Z = (Z_1, Z_2, \ldots, Z_M)$. 
+给定三个长度为 `m` 的序列 $X = (X_1, X_2, \ldots, X_M)$, $Y = (Y_1, Y_2, \ldots, Y_M)$, 和 $Z = (Z_1, Z_2, \ldots, Z_M)$. 
 
-要求构造出一个长度为 $n$ 的序列 $A=(A_1,A_2,\ldots,A_N)$ , 使得 对于所有 $i\ \in\ [1,\ m]$ , 都有 $A_{X_i} \oplus A_{Y_i} = Z_i$ .
-
-
-
-
-
-
-
+要求构造出一个长度为 `$n$` 的序列 $A=(A_1,A_2,\ldots,A_N)$ , 使得 对于所有 $i \in [1, m]$ , 都有 $A_{X_i} \oplus A_{Y_i} = Z_i$ .
 
 
 ## **F - Rotated Inversions**
 
-### Problem Statement
+## 题目描述
 
-You are given integers $N, M$ and a length-$N$ sequence of non-negative integers $A = (A_1, A_2, \ldots, A_N)$.
+给定整数 $N, M$ 和一个长度为 $N$ 的非负整数序列 $A=(A_1, A_2, \ldots, A_N)$。
 
-For $k = 0, 1, \ldots, M-1$, solve the following problem:
+对于每个 $k=0,1,\ldots,M-1$，请解决以下问题：
 
-> Define an integer sequence $B = (B_1, B_2, \ldots, B_N)$ so that $B_i$ is the remainder of $A_i + k$ when divided by $M$. Find the inversion number in $B$.
+> 定义整数序列 $B=(B_1, B_2, \ldots, B_N)$，其中 $B_i = (A_i + k) \bmod M$。求序列 $B$ 的逆序对数。
 
-What is the inversion number? The inversion number of a sequence $(A_1, A_2, \dots, A_N)$ is the number of integer pairs $(i, j)$ satisfying $1 \leq i\ \textless\ j \le N$ and $A_i\ \textless\ A_j$.
+关于逆序对数的定义：  
+序列 $(A_1, A_2, \ldots, A_N)$ 的逆序对数是指满足 $1 \leq i < j \leq N$ 且 $A_i > A_j$ 的整数对 $(i, j)$ 的个数。
 
-### Constraints
+## 输入格式
 
--   $1 \le N,M \le 2\times 10^5$
--   $0 \leq A_i\ \textless\ M$
--   All input values are integers.
+输入通过标准输入给出，格式如下：
 
-### Input
+> $N$ $M$  
+> $A_1$ $A_2$ $\ldots$ $A_N$
 
-The input is given from Standard Input in the following format:
+## 输出格式
 
-$N$ $M$
-$A_1$ $A_2$ $\ldots$ $A_N$
+输出共 $M$ 行。  
+第 $i$ 行（$1 \leq i \leq M$）应输出 $k = i - 1$ 时的答案。
 
-### Output
+## 输入输出样例 #1
 
-Print $M$ lines.
-
-The $i$\-th line $(1 \le i \le M)$ should contain the answer for the case $k = i-1$.
-
-### Sample Input 1
+### 输入 #1
 
 ```
 3 3
 2 1 0
 ```
 
-### Sample Output 1
+### 输出 #1
 
 ```
 3
@@ -660,18 +704,16 @@ The $i$\-th line $(1 \le i \le M)$ should contain the answer for the case $k = i
 1
 ```
 
--   For $k=0$: $B=(2, 1, 0)$. The inversion number is $3$.
--   For $k=1$: $B=(0, 2, 1)$. The inversion number is $1$.
--   For $k=2$: $B=(1, 0, 2)$. The inversion number is $1$.
+## 输入输出样例 #2
 
-### Sample Input 2
+### 输入 #2
 
 ```
 5 6
 5 3 5 0 1
 ```
 
-### Sample Output 2
+### 输出 #2
 
 ```
 7
@@ -682,14 +724,16 @@ The $i$\-th line $(1 \le i \le M)$ should contain the answer for the case $k = i
 5
 ```
 
-### Sample Input 3
+## 输入输出样例 #3
+
+### 输入 #3
 
 ```
 7 7
 0 1 2 3 4 5 6
 ```
 
-### Sample Output 3
+### 输出 #3
 
 ```
 0
@@ -701,13 +745,27 @@ The $i$\-th line $(1 \le i \le M)$ should contain the answer for the case $k = i
 6
 ```
 
+## 说明/提示
+
+### 约束条件
+
+- $1 \leq N, M \leq 2 \times 10^5$
+- $0 \leq A_i < M$
+- 输入中的所有值均为整数
+
+### 样例解释 1
+
+- 当 $k=0$ 时：$B=(2, 1, 0)$，逆序对数为 $3$（所有 $(i,j)$ 对均满足条件）。
+- 当 $k=1$ 时：$B=(0, 2, 1)$，逆序对数为 $1$（仅 $(2,3)$ 满足）。
+- 当 $k=2$ 时：$B=(1, 0, 2)$，逆序对数为 $1$（仅 $(1,2)$ 满足）。
+
 ### 大意
 
-给定两个整数 $N,\  M$ , 和一个长度为 $N$ 的序列 $A = (A_1, A_2, \ldots, A_N)$ .
+给定两个整数 $N, M$ , 和一个长度为 `N` 的序列 $A = (A_1, A_2, \ldots, A_N)$.
 
 定义一次转变为使得 $B_i = (A_i + k) \bmod M$.
 
-对于 $k\in [0, M-1]$ , 分别依次输出每次转变生成的序列 $B$ 的逆序对数。
+对于 $k \in [0, M-1]$ , 分别依次输出每次转变生成的序列 `B` 的逆序对数。
 
 ### 思路
 
@@ -756,22 +814,25 @@ The $i$\-th line $(1 \le i \le M)$ should contain the answer for the case $k = i
 ```cpp
 void solve()
 {
-    int n, m, prs = 0;   cin >> n >> m;
+    int n, m, prs = 0;   
+    cin >> n >> m;
     vector<int> v(n + 1);
     SegTree<Info, Laz> seg(m + 1);	// 线段树就是最常见的区间加 + 区间查询
-    for (int i=1;i<=n;i++)
+    for (int i = 1; i <= n; i ++)
     {
-        cin >> v[i];    v[i] ++;	// 由于 v[i] 是和取模有关，存在 0 ，因此先加一，进行类似离散化操作
+        cin >> v[i];    
+        v[i] ++;	// 由于 v[i] 是和取模有关，存在 0 ，因此先加一，进行类似离散化操作
         prs += seg.query(v[i] + 1, m).sum;	// 查询 [v[i] + 1, +∞) 在前面的序列中出现了几次，即当前数与前面数构成的逆序对数
         seg.modify(v[i], v[i], {1});	// 当前数位置加一
         v[i] --;	// 求完逆序对后还原 v[i]
     }
     SegTree<Info, Laz> ans(m + 1);
-    for (int i=1;i<=m;i++)  ans.arr[i] = prs;
+    for (int i = 1; i <= m; i ++)
+        ans.arr[i] = prs;
     ans.build();
-    for (int i=1;i<=n;i++)	// 贡献的变化是从变化轮到最后的，属于区间修改
+    for (int i = 1; i <= n; i ++)	// 贡献的变化是从变化轮到最后的，属于区间修改
         ans.modify(m - v[i] + 1, m, {(i - 1) - (n - i)});	// 与其左侧的每个数构成的逆序对数会增加， 与其右侧的每个数构成的逆序对数会减少
-    for (int i=1;i<=m;i++)	cout << ans.query(i, i).sum << _endl;
+    for (int i = 1; i <= m; i ++)
+    	cout << ans.query(i, i).sum << _endl;
 }
 ```
-
