--- a/pages/posts/题解/abc397 题解.md
+++ b/pages/posts/题解/abc397 题解.md
@@ -12,14 +12,14 @@ tags:
 
 #### 题目大意
 
-给定一个长度为 $N$ 的整数序列：$A = (A_1, A_2, \dots, A_N)$。
+给定一个长度为 `$N$` 的整数序列：`$A = (A_1, A_2, \dots, A_N)$`。
 
-将 $A$ 分成两个非空的连续子数组，求这两个子数组中不同整数的个数之和的最大值。
+将 `$A$` 分成两个非空的连续子数组，求这两个子数组中不同整数的个数之和的最大值。
 
-更正式地，给定一个整数 $i$，其中 $1 \leq i \leq N-1$，要求求出如下两个值的和的最大值：
+更正式地，给定一个整数 `$i$`，其中 `$1 \leq i \leq N-1$`，要求求出如下两个值的和的最大值：
 
-1. 子数组 $(A_1, A_2, \dots, A_i)$ 中不同整数的个数。
-2. 子数组 $(A_{i+1}, A_{i+2}, \dots, A_N)$ 中不同整数的个数。
+1. 子数组 `$(A_1, A_2, \dots, A_i)$` 中不同整数的个数。
+2. 子数组 `$(A_{i+1}, A_{i+2}, \dots, A_N)$` 中不同整数的个数。
 
 #### Constraints
 
@@ -29,7 +29,7 @@ tags:
 
 ### 思路
 
-可以用两个数组 `pre` 和 `bak` s分别表示 从 $1 \sim i$ 子段不同整数个数之和 和 从 $i \sim n$ 子段不同整数个数之和。
+可以用两个数组 `pre` 和 `bak` s分别表示 从 `$1 \sim i$` 子段不同整数个数之和 和 从 `$i \sim n$` 子段不同整数个数之和。
 
 通过上面的预处理, 我们便可以快速得知每个切割位置得到两个子段中不同整数个数和, 因此, 遍历每个可切割位点, 更新答案即可。
 
@@ -66,14 +66,14 @@ void solve()
 
 #### 题目描述
 
-给定一棵包含 $NK$ 个顶点的树。顶点编号为 $1,2,\dots,NK$，第 $i$ 条边（$i=1,2,\dots,NK-1$）双向连接顶点 $u_i$ 和 $v_i$。
+给定一棵包含 `$NK$` 个顶点的树。顶点编号为 `$1,2,\dots,NK$`，第 `$i$` 条边（`$i=1,2,\dots,NK-1$`）双向连接顶点 `$u_i$` 和 `$v_i$`。
 
-判断是否可以将这棵树分解为 $N$ 条长度为 $K$ 的路径。更确切地说，判断是否存在一个 $N \times K$ 的矩阵 $P$ 满足以下条件：
+判断是否可以将这棵树分解为 `$N$` 条长度为 `$K$` 的路径。更确切地说，判断是否存在一个 `$N \times K$` 的矩阵 `$P$` 满足以下条件：
 
-- 数列 $P_{1,1}, P_{1,2}, \dots, P_{1,K}, P_{2,1}, \dots, P_{N,K}$ 是 $1,2,\dots,NK$ 的一个排列。
-- 对于每个 $i=1,2,\dots,N$ 和 $j=1,2,\dots,K-1$，存在一条边连接顶点 $P_{i,j}$ 和 $P_{i,j+1}$。
+- 数列 `$P_{1,1}, P_{1,2}, \dots, P_{1,K}, P_{2,1}, \dots, P_{N,K}$` 是 `$1,2,\dots,NK$` 的一个排列。
+- 对于每个 `$i=1,2,\dots,N$` 和 `$j=1,2,\dots,K-1$`，存在一条边连接顶点 `$P_{i,j}$` 和 `$P_{i,j+1}$`。
 
-你需要判断是否存在这样的矩阵 $P$。
+你需要判断是否存在这样的矩阵 `$P$`。
 
 #### Constraints
 
@@ -86,25 +86,25 @@ void solve()
 
 ### 思路
 
-要想将所有点分为 $N$ 条长度均为 $K$ 的路径，即需从某一点 `dfs` 至图的最深层，
+要想将所有点分为 `$N$` 条长度均为 `$K$` 的路径，即需从某一点 `dfs` 至图的最深层，
 
-当 `dfs` 回归时， 对于以一点为根的子树，记其包含的点为 $T$.
+当 `dfs` 回归时， 对于以一点为根的子树，记其包含的点为 `$T$`.
 
-若  $T\ ==\ k$ , 分析其子节点数 $S$ ：当 $S > 2$ 时， 则无法形成一条路径；只有当$S \leq 2$ 时, 才可形成路径。
+若  `$T == k$` , 分析其子节点数 `$S$` ：当 `$S > 2$` 时， 则无法形成一条路径；只有当`$S \leq 2$` 时, 才可形成路径。
 
-（下图要求 $k == 4$）
+（下图要求 `$k == 4$`）
 
 ​														<img src="https://img.dexbug.com/i/2025/03/17/xbz1u9.png" style="zoom:50%;" /><img src="https://img.dexbug.com/i/2025/03/17/xbz3ll.png" style="zoom:50%;" />
 
-若 $T < k$ , 若 $S \geq\ 2$ , 则无法形成一条路径（由于已经是递归的返程，无法在这一子树中新增节点）。
+若 `$T < k$` , 若 `$S \geq 2$` , 则无法形成一条路径（由于已经是递归的返程，无法在这一子树中新增节点）。
 
-（下图要求 $k == 4$）<img src="https://img.dexbug.com/i/2025/03/17/xbzhpj.png" style="zoom:50%;" />
+（下图要求 `$k == 4$`）<img src="https://img.dexbug.com/i/2025/03/17/xbzhpj.png" style="zoom:50%;" />
 
-若 $T > k$ , 无法形成。 
+若 `$T > k$` , 无法形成。 
 
-分析样例一，$N = 3$ , $K = 2$ , 可将六个点分为如下图的三条路径。 <img src="https://img.dexbug.com/i/2025/03/17/xbytkg.png" style="zoom:50%;" />
+分析样例一，`$N = 3$` , `$K = 2$` , 可将六个点分为如下图的三条路径。 <img src="https://img.dexbug.com/i/2025/03/17/xbytkg.png" style="zoom:50%;" />
 
-分析样例二，$N = 3$ , $K = 2$ , 对于节点 $3$ , 无论其选择与节点 $4$ 或节点 $6$ 形成路径，都会将另一点隔绝。<img src="https://img.dexbug.com/i/2025/03/17/xbzcby.png" style="zoom:50%;" />
+分析样例二，`$N = 3$` , `$K = 2$` , 对于节点 `$3$` , 无论其选择与节点 `$4$` 或节点 `$6$` 形成路径，都会将另一点隔绝。<img src="https://img.dexbug.com/i/2025/03/17/xbzcby.png" style="zoom:50%;" />
 
 ### CODE
 
@@ -154,15 +154,15 @@ void solve()
 
 #### 题目大意
 
-给定一个长度为 $N$ 的整数序列：$A = (A_1, A_2, \dots, A_N)$
+给定一个长度为 `$N$` 的整数序列：`$A = (A_1, A_2, \dots, A_N)$`
 
-将 $A$ 分成三个非空的连续子数组，求这三个子数组中不同整数的个数之和的最大值。
+将 `$A$` 分成三个非空的连续子数组，求这三个子数组中不同整数的个数之和的最大值。
 
-更正式地，给定一对整数 $(i, j)$，其中 $1 \leq i < j \leq N-1$，要求求出如下三个值的和的最大值：
+更正式地，给定一对整数 `$(i, j)$`，其中 `$1 \leq i < j \leq N-1$`，要求求出如下三个值的和的最大值：
 
-1. 子数组 $(A_1, A_2, \dots, A_i)$ 中不同整数的个数。
-2. 子数组 $(A_{i+1}, A_{i+2}, \dots, A_j)$ 中不同整数的个数。
-3. 子数组 $(A_{j+1}, A_{j+2}, \dots, A_N)$ 中不同整数的个数。
+1. 子数组 `$(A_1, A_2, \dots, A_i)$` 中不同整数的个数。
+2. 子数组 `$(A_{i+1}, A_{i+2}, \dots, A_j)$` 中不同整数的个数。
+3. 子数组 `$(A_{j+1}, A_{j+2}, \dots, A_N)$` 中不同整数的个数。
 
 #### Constraints
 
@@ -172,9 +172,9 @@ void solve()
 
 #### 思路
 
-类似于 [C](https://linyisu.github.io/2025/03/17/2025-03-17-abc-397-%E9%A2%98%E8%A7%A3/#c-variety-split-easy) 题的思路, 预处理出 `pre` (从 $1 \sim i$ 子段不同整数个数之和) 和 `bak` (从 $i \sim n$ 子段不同整数个数之和) 数组。
+类似于 [C](https://linyisu.github.io/2025/03/17/2025-03-17-abc-397-%E9%A2%98%E8%A7%A3/#c-variety-split-easy) 题的思路, 预处理出 `pre` (从 `$1 \sim i$` 子段不同整数个数之和) 和 `bak` (从 `$i \sim n$` 子段不同整数个数之和) 数组。
 
-接下来，我们面临的问题是：在 C 题中，只有一个切割点，我们可以在 $\mathcal O(n)$ 的时间内求得答案。但是本题中，存在两个位置的切割点，$\mathcal O(N^2)$ 的时间复杂度，难以快速求解答案，无法满足我们的需求。
+接下来，我们面临的问题是：在 C 题中，只有一个切割点，我们可以在 `$\mathcal O(n)$` 的时间内求得答案。但是本题中，存在两个位置的切割点，`$\mathcal O(N^2)$` 的时间复杂度，难以快速求解答案，无法满足我们的需求。
 
 我们需要先固定一个切割点(右切割点)：
 
@@ -188,17 +188,17 @@ $$
 $$
 ![](https://img.dexbug.com/i/2025/03/17/qvlktx.png)
 
-观察上面的式子，当 $j$ 变为 $j+1$ 时，
+观察上面的式子，当 `$j$` 变为 `$j+1$` 时，
 
-若 $v[j + 1]$ 存在于中间子段， 则其加入无法对中间子段的不同整数的个数产生贡献。
+若 `$v[j + 1]$` 存在于中间子段， 则其加入无法对中间子段的不同整数的个数产生贡献。
 
-而当 $v[j + 1]$ 不存在于中间子段时， 则其加入将对中间子段不同整数个数产生贡献。
+而当 `$v[j + 1]$` 不存在于中间子段时， 则其加入将对中间子段不同整数个数产生贡献。
 
 ![](https://img.dexbug.com/i/2025/03/17/qvlrl4.png)
 
-因此，我们需要记录当前位置的 $v_i$ 上一次出现的位置 (若前面未曾出现，则为 $0$) 。因此定义 `lst` 数组 记录我们所需信息。
+因此，我们需要记录当前位置的 `$v_i$` 上一次出现的位置 (若前面未曾出现，则为 `$0$`) 。因此定义 `lst` 数组 记录我们所需信息。
 
-我们再看回 $pre_1 + f(2,j),\ pre_2 + f(3, j),\ pre_3+f(4, j),\ \dots\ ,\ pre_{j-1}+f(j,j)$ 序列：（将 `pre` 简称为 `p`）
+我们再看回 `$pre_1 + f(2,j),\ pre_2 + f(3, j),\ pre_3+f(4, j),\ \dots\ ,\ pre_{j-1}+f(j,j)$` 序列：（将 `pre` 简称为 `p`）
 $$
 p_1 + f(2,j)\qquad p_2 + f(3, j)\qquad p_3+f(4, j)\qquad \dots\qquad p_{j-1}+f(j,j)
 \\
@@ -206,9 +206,9 @@ p_1 + f(2,j+1)\quad p_2 + f(3, j+1)\quad p_3+f(4, j+1)\quad \dots \quad p_{j-1}+
 \\
 p_{j}+f(j+1,j+1)
 $$
-可以发现，不仅仅是 `f(l, r)` 右边界扩展了，序列还增加了一项 $pre_{j}+f(j+1,j+1)$ 。
+可以发现，不仅仅是 `f(l, r)` 右边界扩展了，序列还增加了一项 `$pre_{j}+f(j+1,j+1)$` 。
 
- `f(l, r)` 右边界扩展 当且仅当  $v[j + 1]$ 不存在于中间子段时， 其加入会对 中间子段不同整数个数 产生贡献。 即区间 $[lst_{j+1} + 1, j]$ 中间子段不同整数个数 会加一。
+ `f(l, r)` 右边界扩展 当且仅当  `$v[j + 1]$` 不存在于中间子段时， 其加入会对 中间子段不同整数个数 产生贡献。 即区间 `$[lst_{j+1} + 1, j]$` 中间子段不同整数个数 会加一。
 
 总结一下我们的需求：一个能够快速实现区间修改（处理贡献），区间查询最值（更新答案）的数据结构 —— 线段树！！
 
@@ -279,9 +279,9 @@ void solve()
 
 #### 题目描述
 
-给定一个有向图，包含 $N$ 个顶点和 $M$ 条边。顶点编号为 $1, 2, \dots, N$。第 $j$ 条边（$j=1, 2, \dots, M$）从顶点 $u_j$ 指向顶点 $v_j$。保证顶点 $N$ 可以从顶点 $1$ 到达。
+给定一个有向图，包含 `$N$` 个顶点和 `$M$` 条边。顶点编号为 `$1, 2, \dots, N$`。第 `$j$` 条边（`$j=1, 2, \dots, M$`）从顶点 `$u_j$` 指向顶点 `$v_j$`。保证顶点 `$N$` 可以从顶点 `$1$` 到达。
 
-初始时，所有边的权重均为 $0$。我们从 $M$ 条边中选择恰好 $K$ 条，将它们的权重修改为 $1$。请你求出在修改权重后的图中，从顶点 $1$ 到顶点 $N$ 的最短距离的最大值。
+初始时，所有边的权重均为 `$0$`。我们从 `$M$` 条边中选择恰好 `$K$` 条，将它们的权重修改为 `$1$`。请你求出在修改权重后的图中，从顶点 `$1$` 到顶点 `$N$` 的最短距离的最大值。
 
 #### Constraints
 
