--- a/pages/problems/奶酪.md
+++ b/pages/problems/奶酪.md
@@ -15,9 +15,9 @@ date: 2025-02-04 14:22:01
 
 #### 题目描述
 
-现有一块大奶酪，它的高度为 $h$，它的长度和宽度我们可以认为是无限大的，奶酪中间有许多半径相同的球形空洞。
+现有一块大奶酪，它的高度为 `$h$`，它的长度和宽度我们可以认为是无限大的，奶酪中间有许多半径相同的球形空洞。
 
-我们可以在这块奶酪中建立空间坐标系，在坐标系中，奶酪的下表面为 $z=0$，奶酪的上表面为 $z=h$。 
+我们可以在这块奶酪中建立空间坐标系，在坐标系中，奶酪的下表面为 `$z=0$`，奶酪的上表面为 `$z=h$`。 
 
 现在，奶酪的下表面有一只小老鼠 Jerry，它知道奶酪中所有空洞的球心所在的坐标。
 
@@ -25,7 +25,7 @@ date: 2025-02-04 14:22:01
 
 位于奶酪下表面的 Jerry 想知道，在不破坏奶酪的情况下，能否利用已有的空洞跑到奶酪的上表面去? 
 
-空间内两点 $P_1(x_1,y_1,z_1)、P_2(x_2,y_2,z_2)$ 的距离公式如下：
+空间内两点 `$P_1(x_1,y_1,z_1)、P_2(x_2,y_2,z_2)$` 的距离公式如下：
 
 $$
 dist(P_1,P_2) = \sqrt{(x_1-x_2)^2+(y_1-y_2)^2+(z_1-z_2)^2}
@@ -35,24 +35,24 @@ $$
 
 每个输入文件包含多组数据。  
 
-输入文件的第一行，包含一个正整数 $T$，代表该输入文件中所含的数据组数。  
+输入文件的第一行，包含一个正整数 `$T$`，代表该输入文件中所含的数据组数。  
 
-接下来是 $T$ 组数据，每组数据的格式如下：
+接下来是 `$T$` 组数据，每组数据的格式如下：
 
-第一行包含三个正整数 $n，h$ 和 $r$，两个数之间以一个空格分开，分别代表奶酪中空洞的数量，奶酪的高度和空洞的半径。  
+第一行包含三个正整数 `$n，h$` 和 `$r$`，两个数之间以一个空格分开，分别代表奶酪中空洞的数量，奶酪的高度和空洞的半径。  
 
-接下来的 $n$ 行，每行包含三个整数 $x、y、z$，两个数之间以一个空格分开，表示空洞球心坐标为 $(x,y,z)$。
+接下来的 `$n$` 行，每行包含三个整数 `$x、y、z$`，两个数之间以一个空格分开，表示空洞球心坐标为 `$(x,y,z)$`。
 
 #### 输出格式
 
-输出文件包含 $T$ 行，分别对应 $T$ 组数据的答案，如果在第 $i$ 组数据中，Jerry 能从下表面跑到上表面，则输出 `Yes`，如果不能，则输出 `No`。
+输出文件包含 `$T$` 行，分别对应 `$T$` 组数据的答案，如果在第 `$i$` 组数据中，Jerry 能从下表面跑到上表面，则输出 `Yes`，如果不能，则输出 `No`。
 
 #### 数据范围
 
-$1 \le n \le 1000$,  
-$1 \le h,r \le 10^9$,  
-$T \le 20$,  
-坐标的绝对值不超过$10^9$
+`$1 \le n \le 1000$`,  
+`$1 \le h,r \le 10^9$`,  
+`$T \le 20$`,  
+坐标的绝对值不超过`$10^9$`
 
 #### 输入样例：
 
@@ -81,7 +81,7 @@ Yes
 
 ##### 并查集
 
-由于奶酪上的球形空洞数量较少（$1 \le n \le 1000$），因此，可以双重循环枚举每两个球形空洞是否连通（即两个球是否相交或相切）。
+由于奶酪上的球形空洞数量较少（`$1 \le n \le 1000$`），因此，可以双重循环枚举每两个球形空洞是否连通（即两个球是否相交或相切）。
 
 若是，则可以`merge`两者。但由于题目问的是Jerry是否能从奶酪的下表面经由球形空洞从上表面出去，因此要建立两个虚拟的点，分别表示球的上下表面，他们与每个球的距离就是球心到平面的距离，如果相交或相切，也合并。最后就是询问上下表面是否连通，用`same`函数判断即可。
 
@@ -89,7 +89,7 @@ Yes
 
 这道题可以用 **dfs** 做，将空洞看为点，相切或相交则看作连边。
 
-首先处理数据，看哪些空洞相切或相交，即两者球心距离小于半径 $r$，就将他们连边。
+首先处理数据，看哪些空洞相切或相交，即两者球心距离小于半径 `$r$`，就将他们连边。
 
 如果该空洞与下表面相切，就代表可以从该空洞开始搜索。
 
