--- a/pages/problems/方格取数.md
+++ b/pages/problems/方格取数.md
@@ -17,20 +17,20 @@ NOIP 2000 提高组 T4
 
 #### 题目描述
 
-设有 $N \times N$ 的方格图 $(N \le 9)$，我们将其中的某些方格中填入正整数，而其他的方格中则放入数字 $0$。如下图所示（见样例）:
+设有 `$N \times N$` 的方格图 `$(N \le 9)$`，我们将其中的某些方格中填入正整数，而其他的方格中则放入数字 `$0$`。如下图所示（见样例）:
 
 ![](https://cdn.luogu.com.cn/upload/image_hosting/0bpummja.png)
 
-某人从图的左上角的 $A$ 点出发，可以向下行走，也可以向右走，直到到达右下角的 $B$ 点。在走过的路上，他可以取走方格中的数（取走后的方格中将变为数字 $0$）。  
-此人从 $A$ 点到 $B$ 点共走两次，试找出 $2$ 条这样的路径，使得取得的数之和为最大。
+某人从图的左上角的 `$A$` 点出发，可以向下行走，也可以向右走，直到到达右下角的 `$B$` 点。在走过的路上，他可以取走方格中的数（取走后的方格中将变为数字 `$0$`）。  
+此人从 `$A$` 点到 `$B$` 点共走两次，试找出 `$2$` 条这样的路径，使得取得的数之和为最大。
 
 #### 输入格式
 
-输入的第一行为一个整数 $N$（表示 $N \times N$ 的方格图），接下来的每行有三个整数，前两个表示位置，第三个数为该位置上所放的数。一行单独的 $0$ 表示输入结束。
+输入的第一行为一个整数 `$N$`（表示 `$N \times N$` 的方格图），接下来的每行有三个整数，前两个表示位置，第三个数为该位置上所放的数。一行单独的 `$0$` 表示输入结束。
 
 #### 输出格式
 
-只需输出一个整数，表示 $2$ 条路径上取得的最大的和。
+只需输出一个整数，表示 `$2$` 条路径上取得的最大的和。
 
 #### 样例输入 #1
 
@@ -55,7 +55,7 @@ NOIP 2000 提高组 T4
 
 #### 提示
 
-数据范围：$1\le N\le 9$。
+数据范围：`$1\le N\le 9$`。
 
 #### 思路
 
@@ -63,7 +63,7 @@ NOIP 2000 提高组 T4
 
 因此就是**四维动态规划**。
 
-定义状态 $f_{i\ j\ k\ l}$ 为从 $(1,1),\ (1,1)$ 分别走到 $(i, j),\ (k,l)$ 取得的数之和的最大值。
+定义状态 `$f_{i\ j\ k\ l}$` 为从 `$(1,1),\ (1,1)$` 分别走到 `$(i, j),\ (k,l)$` 取得的数之和的最大值。
 
 他的上一个状态可以有四种：
 
@@ -75,13 +75,13 @@ NOIP 2000 提高组 T4
 
 ④  第一条路径从**上**来，第二条路经从**上**来
 
-需要**注意**的是：当当前到的点重合时，说明第一次取过了，第二次到的时候应该是 $0$ , 因此不能算两次的 $v$ 。
+需要**注意**的是：当当前到的点重合时，说明第一次取过了，第二次到的时候应该是 `$0$` , 因此不能算两次的 `$v$` 。
 
 转移方程：
 
-$dp_{i\ j\ k\ l}=max\{dp_{i\ j-1\ k\ l-1},\ dp_{i\ j-1\ k-1\ l},\ dp_{i-1\ j\ k\ l-1},\ dp_{i-1\ j\ k-1\ l}\}+v_{i\ j} + v_{k\ l}$		$(i, j) \not= (k, l)$
+`$dp_{i\ j\ k\ l}=max\{dp_{i\ j-1\ k\ l-1},\ dp_{i\ j-1\ k-1\ l},\ dp_{i-1\ j\ k\ l-1},\ dp_{i-1\ j\ k-1\ l}\}+v_{i\ j} + v_{k\ l}$`		`$(i, j) \not= (k, l)$`
 
-$dp_{i\ j\ k\ l}=max\{dp_{i\ j-1\ k\ l-1},\ dp_{i\ j-1\ k-1\ l},\ dp_{i-1\ j\ k\ l-1},\ dp_{i-1\ j\ k-1\ l}\}+v_{i\ j}$			  	 $(i, j) = (k, l)$
+`$dp_{i\ j\ k\ l}=max\{dp_{i\ j-1\ k\ l-1},\ dp_{i\ j-1\ k-1\ l},\ dp_{i-1\ j\ k\ l-1},\ dp_{i-1\ j\ k-1\ l}\}+v_{i\ j}$`			  	 `$(i, j) = (k, l)$`
 
 ```cpp
 const int N = 15;
@@ -112,13 +112,13 @@ void solve()
 
 在上面的代码中，我们可以发现，不是同步走到的格子方案是无效的，且观察到走过**相同步数**后，**两条路径所到达的位置横纵坐标之和相等**。利用这个性质，可以优化为**三维动态规划**。
 
-定义状态 $f_{k\ i_1\ i_2}$ 为从 $(1,1),\ (1,1)$ 分别走到 $(i_1, k-i_1),\ (i_2,k-i_2)$ 取得的数之和的最大值。
+定义状态 `$f_{k\ i_1\ i_2}$` 为从 `$(1,1),\ (1,1)$` 分别走到 `$(i_1, k-i_1),\ (i_2,k-i_2)$` 取得的数之和的最大值。
 
 状态和转移方程均保持不变。
 
-$dp_{i\ j\ k\ l}=max\{dp_{i\ j-1\ k\ l-1},\ dp_{i\ j-1\ k-1\ l},\ dp_{i-1\ j\ k\ l-1},\ dp_{i-1\ j\ k-1\ l}\}+v_{i\ j} + v_{k\ l}$		$(i, j) \not= (k, l)$
+`$dp_{i\ j\ k\ l}=max\{dp_{i\ j-1\ k\ l-1},\ dp_{i\ j-1\ k-1\ l},\ dp_{i-1\ j\ k\ l-1},\ dp_{i-1\ j\ k-1\ l}\}+v_{i\ j} + v_{k\ l}$`		`$(i, j) \not= (k, l)$`
 
-$dp_{i\ j\ k\ l}=max\{dp_{i\ j-1\ k\ l-1},\ dp_{i\ j-1\ k-1\ l},\ dp_{i-1\ j\ k\ l-1},\ dp_{i-1\ j\ k-1\ l}\}+v_{i\ j}$			  	 $(i, j) = (k, l)$
+`$dp_{i\ j\ k\ l}=max\{dp_{i\ j-1\ k\ l-1},\ dp_{i\ j-1\ k-1\ l},\ dp_{i-1\ j\ k\ l-1},\ dp_{i-1\ j\ k-1\ l}\}+v_{i\ j}$`			  	 `$(i, j) = (k, l)$`
 
 ```cpp
 const int N = 15;
