--- a/pages/problems/石子合并.md
+++ b/pages/problems/石子合并.md
@@ -14,19 +14,19 @@ date: 2025-02-10 18:32:38
 
 #### 题目描述
 
-在一个圆形操场的四周摆放 $N$ 堆石子，现要将石子有次序地合并成一堆，规定每次只能选相邻的 $2$ 堆合并成新的一堆，并将新的一堆的石子数，记为该次合并的得分。
+在一个圆形操场的四周摆放 `$N$` 堆石子，现要将石子有次序地合并成一堆，规定每次只能选相邻的 `$2$` 堆合并成新的一堆，并将新的一堆的石子数，记为该次合并的得分。
 
-试设计出一个算法,计算出将 $N$ 堆石子合并成 $1$ 堆的最小得分和最大得分。
+试设计出一个算法,计算出将 `$N$` 堆石子合并成 `$1$` 堆的最小得分和最大得分。
 
 #### 输入格式
 
-数据的第 $1$ 行是正整数 $N$，表示有 $N$ 堆石子。
+数据的第 `$1$` 行是正整数 `$N$`，表示有 `$N$` 堆石子。
 
-第 $2$ 行有 $N$ 个整数，第 $i$ 个整数 $a_i$ 表示第 $i$ 堆石子的个数。
+第 `$2$` 行有 `$N$` 个整数，第 `$i$` 个整数 `$a_i$` 表示第 `$i$` 堆石子的个数。
 
 #### 输出格式
 
-输出共 $2$ 行，第 $1$ 行为最小得分，第 $2$ 行为最大得分。
+输出共 `$2$` 行，第 `$1$` 行为最小得分，第 `$2$` 行为最大得分。
 
 #### 样例输入
 
@@ -44,7 +44,7 @@ date: 2025-02-10 18:32:38
 
 #### 提示
 
-$1\leq N\leq 100$，$0\leq a_i\leq 20$。
+`$1\leq N\leq 100$`，`$0\leq a_i\leq 20$`。
 
 #### 思路
 
@@ -56,27 +56,27 @@ $1\leq N\leq 100$，$0\leq a_i\leq 20$。
 
 因此，可以考虑枚举这个分界点。
 
-但是由于枚举分界点是 $\mathcal O(n)$ 复杂度，且 [合并石子](https://linyisu.github.io/2025/02/10/%E5%90%88%E5%B9%B6%E7%9F%B3%E5%AD%90/) 的复杂度为 $\mathcal O(n^3)$ ，总的时间复杂度为 $\mathcal O(n^4)$ , 而 $1\leq N\leq 100$，则总计算量为 $100,\ 000,\ 000$, 可能超时。
+但是由于枚举分界点是 `$\mathcal O(n)$` 复杂度，且 [合并石子](https://linyisu.github.io/2025/02/10/%E5%90%88%E5%B9%B6%E7%9F%B3%E5%AD%90/) 的复杂度为 `$\mathcal O(n^3)$` ，总的时间复杂度为 `$\mathcal O(n^4)$` , 而 `$1\leq N\leq 100$`，则总计算量为 `$100,\ 000,\ 000$`, 可能超时。
 
 接着想到，对于带有环的问题，一般考虑 **化曲为直**，因此将环斩为链，并在其后续上一段相同的链。
 
-此时，当我们枚举 $i\in [1,\ n]$ 的长度为 $n$ 的区间，可以惊奇的发现，这些区间正好就是上面期望求得的 带有一个分界点的区间。
+此时，当我们枚举 `$i\in [1,\ n]$` 的长度为 `$n$` 的区间，可以惊奇的发现，这些区间正好就是上面期望求得的 带有一个分界点的区间。
 
 ![](https://img.dexbug.com/i/2025/03/17/qvl9st.png)
 
-定义 $dp_{i\ j}$ 为将区间 $[i,\ j]$ 的石子合并成一堆的最小得分。
+定义 `$dp_{i\ j}$` 为将区间 `$[i,\ j]$` 的石子合并成一堆的最小得分。
 
-则可将 $[i,\ j]$ 区间通过一个分割点 $k$ 分为两个部分，问题转化为先合并分割点两端的小区间内的石子，进而将两堆石子合并。
+则可将 `$[i,\ j]$` 区间通过一个分割点 `$k$` 分为两个部分，问题转化为先合并分割点两端的小区间内的石子，进而将两堆石子合并。
 
-因此，可以通过枚举 $k\ (k \in [i,\ j))$。
+因此，可以通过枚举 `$k\ (k \in [i,\ j))$`。
 
 状态转移方程：
 
-$f_{i\ j} = \mathop{min}\limits_{k\in[i,\ j-1]}\{f_{i\ k} + f_{k+1\ j} + \sum_{k=i}^{j-1}{v_i}\}$
+`$f_{i\ j} = \mathop{min}\limits_{k\in[i,\ j-1]}\{f_{i\ k} + f_{k+1\ j} + \sum_{k=i}^{j-1}{v_i}\}$`
 
-$g_{i\ j} = \mathop{max}\limits_{k\in[i,\ j-1]}\{g_{i\ k} + g_{k+1\ j} + \sum_{k=i}^{j-1}{v_i}\}$
+`$g_{i\ j} = \mathop{max}\limits_{k\in[i,\ j-1]}\{g_{i\ k} + g_{k+1\ j} + \sum_{k=i}^{j-1}{v_i}\}$`
 
-注意到递推式中存在 $\sum_{k=i}^{j-1}{v_i}$ 项，因此需要预处理前缀和。
+注意到递推式中存在 `$\sum_{k=i}^{j-1}{v_i}$` 项，因此需要预处理前缀和。
 
 同时，需要对 `dp数组` 初始化。
 
