--- a/pages/problems/租用游艇.md
+++ b/pages/problems/租用游艇.md
@@ -15,15 +15,15 @@ date: 2025-02-03 15:40:33
 
 #### 题目描述
 
-长江游艇俱乐部在长江上设置了 $n$ 个游艇出租站 $1,2,\cdots,n$。游客可在这些游艇出租站租用游艇，并在下游的任何一个游艇出租站归还游艇。游艇出租站 $i$ 到游艇出租站 $j$ 之间的租金为 $r(i,j)$（$1\le i\lt j\le n$）。试设计一个算法，计算出从游艇出租站 $1$ 到游艇出租站 $n$ 所需的最少租金。
+长江游艇俱乐部在长江上设置了 `$n$` 个游艇出租站 `$1,2,\cdots,n$`。游客可在这些游艇出租站租用游艇，并在下游的任何一个游艇出租站归还游艇。游艇出租站 `$i$` 到游艇出租站 `$j$` 之间的租金为 `$r(i,j)$`（`$1\le i\lt j\le n$`）。试设计一个算法，计算出从游艇出租站 `$1$` 到游艇出租站 `$n$` 所需的最少租金。
 
 #### 输入格式
 
-第一行中有一个正整数 $n$，表示有 $n$ 个游艇出租站。接下来的 $n-1$ 行是一个半矩阵 $r(i,j)$（$1\le i<j\le n$）。
+第一行中有一个正整数 `$n$`，表示有 `$n$` 个游艇出租站。接下来的 `$n-1$` 行是一个半矩阵 `$r(i,j)$`（`$1\le i<j\le n$`）。
 
 #### 输出格式
 
-输出计算出的从游艇出租站 $1$ 到游艇出租站 $n$ 所需的最少租金。
+输出计算出的从游艇出租站 `$1$` 到游艇出租站 `$n$` 所需的最少租金。
 
 #### 样例输入 
 
@@ -41,17 +41,17 @@ date: 2025-02-03 15:40:33
 
 #### 提示
 
-$n\le 200$，保证计算过程中任何时刻数值都不超过 $10^6$。
+`$n\le 200$`，保证计算过程中任何时刻数值都不超过 `$10^6$`。
 
 #### 思路
 
 模板题，没啥好讲的…
 
-注意到是从1到n，因此可以当成是单源最短路（Dijkstra）。$O((n+m)logn)$ 
+注意到是从`$1$`到`$n$`，因此可以当成是单源最短路（Dijkstra）。`$O((n+m)logn)$` 
 
-又因为$n\le 200$，因此，可以用Floyd算法。$O(n^3)$
+又因为`$n\le 200$`，因此，可以用Floyd算法。`$O(n^3)$`
 
-对于dp，设 dp[i] 是 从 1 到 i 的最小消费。$O(n^2)$
+对于`dp`，设 `dp[i]` 是 从 `$1$` 到 `$i$` 的最小消费。`$O(n^2)$`
 
 #### CODE
 
