--- a/pages/problems/八数码.md
+++ b/pages/problems/八数码.md
@@ -16,11 +16,11 @@ date: 2025-02-05 14:08:16
 
 #### 题目描述 
 
-在 $3\times 3$ 的棋盘上，摆有八个棋子，每个棋子上标有 $1$ 至 $8$ 的某一数字。棋盘中留有一个空格，空格用 $0$ 来表示。空格周围的棋子可以移到空格中。要求解的问题是：给出一种初始布局（初始状态）和目标布局（为了使题目简单,设目标状态为 $123804765$），找到一种最少步骤的移动方法，实现从初始布局到目标布局的转变。
+在 $3\times 3$ 的棋盘上，摆有八个棋子，每个棋子上标有 $1$ 至 $8$ 的某一数字。棋盘中留有一个空格，空格用 `$0$` 来表示。空格周围的棋子可以移到空格中。要求解的问题是：给出一种初始布局（初始状态）和目标布局（为了使题目简单,设目标状态为 `123804765`），找到一种最少步骤的移动方法，实现从初始布局到目标布局的转变。
 
 #### 输入格式
 
-输入初始状态，一行九个数字，空格用 $0$ 表示。
+输入初始状态，一行九个数字，空格用 `$0$` 表示。
 
 #### 输出格式
 
@@ -44,13 +44,13 @@ date: 2025-02-05 14:08:16
 
 ![](https://cdn.luogu.com.cn/upload/image_hosting/7rhxbnup.png)
 
-图中标有 $0$ 的是空格。绿色格子是空格所在位置，橙色格子是下一步可以移动到空格的位置。如图所示，用四步可以达到目标状态。
+图中标有 `$0$` 的是空格。绿色格子是空格所在位置，橙色格子是下一步可以移动到空格的位置。如图所示，用四步可以达到目标状态。
 
 并且可以证明，不存在更优的策略。
 
 #### 思路
 
-由于只有一组数据，且只需要算出最短路径长度，因此可直接采用朴素BFS。
+由于只有一组数据，且只需要算出最短路径长度，因此可直接采用朴素`BFS`。
 
 对于每次的搜索，枚举**空白**可移动的四个方向，判断是否会出现越界，重复等情况，如果不会，则加入队列。
 
@@ -61,7 +61,7 @@ int k = cur.find('0');
 int x = k / 3, y = k % 3;
 ```
 
-此时，$x,y$ 即为空白的位置。
+此时，`$x,y$` 即为空白的位置。
 
 #### CODE
 
@@ -186,7 +186,7 @@ ullddrurdllurdruldr
 
 因此，需要用一个`unordered_map`记录前一个棋盘格局和从前一个棋盘格局到当前棋盘格局的方式。
 
-此外，`A*算法`的估价函数f采用的是当前棋盘格局到目标棋盘格局每个棋子需要走的曼哈顿距离之和。
+此外，`A*`算法的估价函数`f`采用的是当前棋盘格局到目标棋盘格局每个棋子需要走的曼哈顿距离之和。
 
 #### CODE
 
