--- a/pages/problems/凸多边形的划分.md
+++ b/pages/problems/凸多边形的划分.md
@@ -15,13 +15,13 @@ date: 2025-02-10 23:55:59
 
 #### 题目描述
 
-给定一个具有 $N$ 个顶点的凸多边形，将顶点从 $1$ 至 $N$ 标号，每个顶点的权值都是一个正整数。将这个凸多边形划分成 $N-2$ 个互不相交的三角形，试求这些三角形顶点的权值乘积和至少为多少。
+给定一个具有 `$N$` 个顶点的凸多边形，将顶点从 `$1$` 至 `$N$` 标号，每个顶点的权值都是一个正整数。将这个凸多边形划分成 `$N-2$` 个互不相交的三角形，试求这些三角形顶点的权值乘积和至少为多少。
 
 #### 输入格式
 
-输入第一行为顶点数 $N$  
+输入第一行为顶点数 `$N$`  
 
-第二行依次为顶点 $1$ 至顶点 $N$ 的权值。
+第二行依次为顶点 `$1$` 至顶点 `$N$` 的权值。
 
 #### 输出格式
 
@@ -42,7 +42,7 @@ date: 2025-02-10 23:55:59
 
 #### 提示
 
-对于 $100 \%$ 的数据，有 $N \leq 50$ ，每个点权值小于 $10^9$ 。
+对于 `$100 \%$` 的数据，有 `$N \leq 50$` ，每个点权值小于 `$10^9$` 。
 
 #### 思路
 
