--- a/pages/problems/合并石子.md
+++ b/pages/problems/合并石子.md
@@ -14,15 +14,15 @@ date: 2025-02-10 13:43:34
 
 #### 题目描述
 
-在一个操场上一排地摆放着 $N$ 堆石子。现要将石子有次序地合并成一堆。规定每次**只能选相邻的２堆石子合并成新的一堆**，并将新的一堆石子数记为该次合并的得分。
+在一个操场上一排地摆放着 `$N$` 堆石子。现要将石子有次序地合并成一堆。规定每次**只能选相邻的`$２$`堆石子合并成新的一堆**，并将新的一堆石子数记为该次合并的得分。
 
-计算出将 $N$ 堆石子合并成一堆的最小得分。
+计算出将 `$N$` 堆石子合并成一堆的最小得分。
 
 #### 输入格式
 
-第一行为一个正整数 $N$ ( $2\leq N\leq 100$ )；
+第一行为一个正整数 `$N$` ( `$2\leq N\leq 100$` )；
 
-以下 $N$ 行,每行一个正整数，小于 $10000$ ，分别表示第 $i$ 堆石子的个数( $1\leq i\leq N$ )。
+以下 `$N$` 行,每行一个正整数，小于 `$10000$` ，分别表示第 `$i$` 堆石子的个数( `$1\leq i\leq N$` )。
 
 #### 输出格式
 
@@ -49,17 +49,17 @@ date: 2025-02-10 13:43:34
 
 #### 思路
 
-定义 $dp_{i\ j}$ 为将区间 $[i,\ j]$ 的石子合并成一堆的最小得分。
+定义 `$dp_{i\ j}$` 为将区间 `$[i,\ j]$` 的石子合并成一堆的最小得分。
 
-则可将 $[i,\ j]$ 区间通过一个分割点 $k$ 分为两个部分，问题转化为先合并分割点两端的小区间内的石子，进而将两堆石子合并。
+则可将 `$[i,\ j]$` 区间通过一个分割点 `$k$` 分为两个部分，问题转化为先合并分割点两端的小区间内的石子，进而将两堆石子合并。
 
-因此，可以通过枚举 $k\ (k \in [i,\ j))$。
+因此，可以通过枚举 `$k\ (k \in [i,\ j))$`。
 
 状态转移方程：
 
-$dp_{i\ j} = \mathop{min}\limits_{k\in[i,\ j-1]}\{dp_{i\ k} + dp_{k+1\ j} + \sum_{k=i}^{j-1}{v_i}\}$
+`$dp_{i\ j} = \mathop{min}\limits_{k\in[i,\ j-1]}\{dp_{i\ k} + dp_{k+1\ j} + \sum_{k=i}^{j-1}{v_i}\}$`
 
-注意到递推式中存在 $\sum_{k=i}^{j-1}{v_i}$ 项，因此需要预处理前缀和。
+注意到递推式中存在 `$\sum_{k=i}^{j-1}{v_i}$` 项，因此需要预处理前缀和。
 
 同时，需要对 `dp数组` 初始化。
 
