--- a/pages/problems/校门外的树（增强版）.md
+++ b/pages/problems/校门外的树（增强版）.md
@@ -15,11 +15,11 @@ date: 2025-02-03 15:40:33
 
 #### 题目描述
 
-校门外马路上本来从编号 $0$ 到 $L$，每一编号的位置都有一棵树。有砍树者每次从编号 $A$ 到 $B$ 处连续砍掉每一棵树，就连树苗也不放过（记 `0 A B`，含 $A$ 和 $B$）；幸运的是还有植树者每次从编号 $C$ 到 $D$ 中凡是空穴（树被砍且还没种上树苗或树苗又被砍掉）的地方都补种上树苗（记 `1 C D`，含 $C$ 和 $D$）；问最终校门外留下的树苗多少棵？植树者种上又被砍掉的树苗有多少棵？
+校门外马路上本来从编号 `$0$` 到 `$L$`，每一编号的位置都有一棵树。有砍树者每次从编号 `$A$` 到 `$B$` 处连续砍掉每一棵树，就连树苗也不放过（记 `0 A B`，含 `$A$` 和 `$B$`）；幸运的是还有植树者每次从编号 `$C$` 到 `$D$` 中凡是空穴（树被砍且还没种上树苗或树苗又被砍掉）的地方都补种上树苗（记 `1 C D`，含 `$C$` 和 `$D$`）；问最终校门外留下的树苗多少棵？植树者种上又被砍掉的树苗有多少棵？
 
 #### 输入格式
 
-第一行，两个正整数 $L$ 和 $N$，表示校园外原来有 $L + 1$ 棵树，并有 $N$ 次砍树或种树的操作。
+第一行，两个正整数 `$L$` 和 `$N$`，表示校园外原来有 `$L + 1$` 棵树，并有 `$N$` 次砍树或种树的操作。
 
 以下 $N$ 行，每行三个整数，表示砍树或植树的标记和范围。
 
@@ -45,7 +45,7 @@ date: 2025-02-03 15:40:33
 
 #### 提示
 
-对于 $100 \%$ 的数据，$1 \le L \le 10000$，$1 \le N \le 100$。
+对于 `$100 \%$` 的数据，`$1 \le L \le 10000$`，`$1 \le N \le 100$`。
 
 #### 思路
 
@@ -57,7 +57,7 @@ date: 2025-02-03 15:40:33
 
 ①	**树**和**树苗**不是同一个概念
 
-②	树坑的范围是从0 ~ n，需要转变为1 ~ n+1
+②	树坑的范围是从`$0$` ~ `$n$`，需要转变为`$1$` ~ `$n+1$`
 
 维护两棵线段树，一棵只维护**树**的数量，另一棵维护**树**和**树苗**的数量。
 
@@ -65,9 +65,9 @@ date: 2025-02-03 15:40:33
 
 每次种树时，计算需种数量。
 
-可以得出： 树数量（n + 1） + 种数量 - 砍数量 = 剩数量
+可以得出： 树数量（`$n + 1$`） + 种数量 - 砍数量 = 剩数量
 
-**第一问：剩苗 = 剩数量 - 剩树（第一棵线段树最后的sum）**
+**第一问：剩苗 = 剩数量 - 剩树（第一棵线段树最后的`sum`）**
 
 **第二问：砍苗 = 砍数量 - （ 树数量 - 剩树）**
 
