--- a/pages/problems/能量项链.md
+++ b/pages/problems/能量项链.md
@@ -14,27 +14,27 @@ date: 2025-02-10 19:56:33
 
 #### 题目描述
 
-在 Mars 星球上，每个 Mars 人都随身佩带着一串能量项链。在项链上有 $N$ 颗能量珠。能量珠是一颗有头标记与尾标记的珠子，这些标记对应着某个正整数。并且，对于相邻的两颗珠子，前一颗珠子的尾标记一定等于后一颗珠子的头标记。因为只有这样，通过吸盘（吸盘是 Mars 人吸收能量的一种器官）的作用，这两颗珠子才能聚合成一颗珠子，同时释放出可以被吸盘吸收的能量。如果前一颗能量珠的头标记为 $m$，尾标记为 $r$，后一颗能量珠的头标记为 $r$，尾标记为 $n$，则聚合后释放的能量为 $m \times r \times n$（Mars 单位），新产生的珠子的头标记为 $m$，尾标记为 $n$。
+在 Mars 星球上，每个 Mars 人都随身佩带着一串能量项链。在项链上有 `$N$` 颗能量珠。能量珠是一颗有头标记与尾标记的珠子，这些标记对应着某个正整数。并且，对于相邻的两颗珠子，前一颗珠子的尾标记一定等于后一颗珠子的头标记。因为只有这样，通过吸盘（吸盘是 Mars 人吸收能量的一种器官）的作用，这两颗珠子才能聚合成一颗珠子，同时释放出可以被吸盘吸收的能量。如果前一颗能量珠的头标记为 `$m$`，尾标记为 `$r$`，后一颗能量珠的头标记为 `$r$`，尾标记为 `$n$`，则聚合后释放的能量为 `$m \times r \times n$`（Mars 单位），新产生的珠子的头标记为 `$m$`，尾标记为 `$n$`。
 
 需要时，Mars 人就用吸盘夹住相邻的两颗珠子，通过聚合得到能量，直到项链上只剩下一颗珠子为止。显然，不同的聚合顺序得到的总能量是不同的，请你设计一个聚合顺序，使一串项链释放出的总能量最大。
 
-例如：设 $N=4$，$4$ 颗珠子的头标记与尾标记依次为 $(2,3)(3,5)(5,10)(10,2)$。我们用记号 $\oplus$ 表示两颗珠子的聚合操作，$(j \oplus k)$ 表示第 $j,k$ 两颗珠子聚合后所释放的能量。则第 $4$，$1$ 两颗珠子聚合后释放的能量为：
+例如：设 `$N=4$`，`$4$` 颗珠子的头标记与尾标记依次为 `$(2,3)(3,5)(5,10)(10,2)$`。我们用记号 `$\oplus$` 表示两颗珠子的聚合操作，`$(j \oplus k)$` 表示第 `$j,k$` 两颗珠子聚合后所释放的能量。则第 `$4$`，`$1$` 两颗珠子聚合后释放的能量为：
 
-$(4 \oplus 1)=10 \times 2 \times 3=60$。
+`$(4 \oplus 1)=10 \times 2 \times 3=60$`。
 
 这一串项链可以得到最优值的一个聚合顺序所释放的总能量为：
 
-$(((4 \oplus 1) \oplus 2) \oplus 3)=10 \times 2 \times 3+10 \times 3 \times 5+10 \times 5 \times 10=710$。
+`$(((4 \oplus 1) \oplus 2) \oplus 3)=10 \times 2 \times 3+10 \times 3 \times 5+10 \times 5 \times 10=710$`。
 
 #### 输入格式
 
-第一行是一个正整数 $N$（$4 \le N \le 100$），表示项链上珠子的个数。第二行是 $N$ 个用空格隔开的正整数，所有的数均不超过 $1000$。第 $i$ 个数为第 $i$ 颗珠子的头标记（$1 \le i \le N$），当 $i<N$ 时，第 $i$ 颗珠子的尾标记应该等于第 $i+1$ 颗珠子的头标记。第 $N$ 颗珠子的尾标记应该等于第 $1$ 颗珠子的头标记。
+第一行是一个正整数 `$N$`（`$4 \le N \le 100$`），表示项链上珠子的个数。第二行是 `$N$` 个用空格隔开的正整数，所有的数均不超过 `$1000$`。第 `$i$` 个数为第 `$i$` 颗珠子的头标记（`$1 \le i \le N$`），当 `$i<N$` 时，第 `$i$` 颗珠子的尾标记应该等于第 `$i+1$` 颗珠子的头标记。第 `$N$` 颗珠子的尾标记应该等于第 `$1$` 颗珠子的头标记。
 
 至于珠子的顺序，你可以这样确定：将项链放到桌面上，不要出现交叉，随意指定第一颗珠子，然后按顺时针方向确定其他珠子的顺序。
 
 #### 输出格式
 
-一个正整数 $E$（$E\le 2.1 \times 10^9$），为一个最优聚合顺序所释放的总能量。
+一个正整数 `$E$`（`$E\le 2.1 \times 10^9$`），为一个最优聚合顺序所释放的总能量。
 
 #### 样例输入 
 
@@ -61,9 +61,9 @@ NOIP 2006 提高组 第一题
 
 矩阵乘法：
 
-设矩阵 $A=(a_{ij})_{m\times n}$ 和 $B=(b_{ij})_{n\times s}$ , 令 $C=(c_{ij})_{m\times s}$ 。
+设矩阵 `$A=(a_{ij})_{m\times n}$` 和 `$B=(b_{ij})_{n\times s}$` , 令 `$C=(c_{ij})_{m\times s}$` 。
 
-其中 $c_{ij}=\sum_{k=1}^n{a_{ik}b_{kj}}(1\leq i\leq m,\ 1\leq j\leq s)$ ,  那么矩阵 $C$ 称为矩阵 $A$ 与 $B$ 的乘积，记为 $C=AB$ 或 $C=AB$ 。
+其中 `$c_{ij}=\sum_{k=1}^n{a_{ik}b_{kj}}(1\leq i\leq m,\ 1\leq j\leq s)$` ,  那么矩阵 `$C$` 称为矩阵 `$A$` 与 `$B$` 的乘积，记为 `$C=AB$` 或 `$C=AB$` 。
 
 为方便，称被乘数 $A$ 为左矩阵，乘数 $B$ 为右矩阵。
 
@@ -71,22 +71,22 @@ NOIP 2006 提高组 第一题
 
 · 只有左矩阵的列数与右矩阵的行数相同的两个矩阵才能相乘。
 
-· 乘积矩阵第 $i$ 行第 $j$ 列处的元素等于左矩阵的第 $i$ 行与右矩阵的第 $j$ 列对应元素乘积之和，即 $(AB)_{ij}=\sum_{k=1}^n{a_{ik}b_{kj}}$。
+· 乘积矩阵第 `$i$` 行第 `$j$` 列处的元素等于左矩阵的第 `$i$` 行与右矩阵的第 `$j$` 列对应元素乘积之和，即 `$(AB)_{ij}=\sum_{k=1}^n{a_{ik}b_{kj}}$`。
 
 · 乘积矩阵的行数等于左矩阵的行数，列数等于右矩阵的列数。
 
 
 
-定义 $dp_{i\ j}$ 为将区间 $[i,\ j]$ 的能量珠聚合的最大能量。
+定义 `$dp_{i\ j}$` 为将区间 `$[i,\ j]$` 的能量珠聚合的最大能量。
 
-则可将 $[i,\ j]$ 区间通过一个分割点 $k$ 分为两个部分，问题转化为先合并分割点两端的小区间内的能量珠，进而将两个大的能量珠聚合。
+则可将 `$[i,\ j]$` 区间通过一个分割点 `$k$` 分为两个部分，问题转化为先合并分割点两端的小区间内的能量珠，进而将两个大的能量珠聚合。
 
-因此，可以通过枚举 $k\ (k \in [i,\ j))$。
+因此，可以通过枚举 `$k\ (k \in [i,\ j))$`。
 
 状态转移方程：
 
-$dp_{i\ j} = \mathop{max}\limits_{k\in[i,\ j-1]}\{dp_{i\ k} + dp_{k+1\ j} + head_{v_l}\times tail
-_{v_k}\times tail_{v_r}\}$
+`$dp_{i\ j} = \mathop{max}\limits_{k\in[i,\ j-1]}\{dp_{i\ k} + dp_{k+1\ j} + head_{v_l}\times tail
+_{v_k}\times tail_{v_r}\}$`
 
 ```cpp
 void solve()
